# scrapyard-london

./: README.md
pico-firmware/: CMakeLists.txt  README.md  flake.nix
pico-firmware/pico/: CMakeLists.txt  main.c
pico-firmware/shared/rgbleds/: CMakeLists.txt  rgbleds.c  rgbleds.h
playdate/: README.md
playdate/Source/: display.lua  main.lua  pdxinfo
script/: bash.sh
